# AIWorkspace

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
doc/: 开发计划.md  新建 文本文档.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
