[package]
name = "ai-workspace"
version = "1.0.5"
description = "AI Workspace - Unified Capability Management for Agents"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.0"
chrono = "0.4"
dirs = "5"
